# MachineNotesServer

./: Cargo.toml  README.md
migrations/2022-02-13-115723_create_user_account_table/: down.sql  up.sql
src/: account_api.rs  account_database.rs  account_dto.rs  account_entity.rs  account_interaction.rs  error_data.rs  main.rs  middleware.rs  notes_api.rs  notes_data.rs  postgres_database_connection.rs  schema.rs  security.rs  security_data.rs  utils.rs
src/api/: mod.rs  notes_api.rs
src/api/data/: mod.rs  notes_data.rs  notes_data_dummy.rs  paging_data.rs
